--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /***
-* RHD Dev: Compiled at 6:33:51 PM on 17-04-2016
+* RHD Dev: Compiled at 9:29:15 PM on 25-04-2016
 ***/
 
 .ghost-button {
@@ -1318,6 +1318,7 @@ input[type="submit"]:hover {
 	Extras
    ========================================================================== */
 .soliloquy-outer-container .soliloquy-slider img {
+  width: auto;
   max-height: 500px;
 }
 /* ==========================================================================
