--- a/stylus/partials/_global.styl
+++ b/stylus/partials/_global.styl
@@ -149,4 +149,5 @@ $ff-body = 'Lato', sans-serif
 	{$elem}
 		.soliloquy-slider
 			img
+				width auto
 				max-height $maxHt
